; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ethernet/extr_pe2.c_pEII_request.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ethernet/extr_pe2.c_pEII_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.datalink_proto = type { i32 }
%struct.sk_buff = type { i32, i32, %struct.net_device* }
%struct.net_device = type { i32 }

@ETH_P_IPX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.datalink_proto*, %struct.sk_buff*, i8*)* @pEII_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pEII_request(%struct.datalink_proto* %0, %struct.sk_buff* %1, i8* %2) #0 {
  %4 = alloca %struct.datalink_proto*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.net_device*, align 8
  store %struct.datalink_proto* %0, %struct.datalink_proto** %4, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %9 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %8, i32 0, i32 2
  %10 = load %struct.net_device*, %struct.net_device** %9, align 8
  store %struct.net_device* %10, %struct.net_device** %7, align 8
  %11 = load i32, i32* @ETH_P_IPX, align 4
  %12 = call i32 @htons(i32 %11)
  %13 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %14 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %16 = load %struct.net_device*, %struct.net_device** %7, align 8
  %17 = load i32, i32* @ETH_P_IPX, align 4
  %18 = load i8*, i8** %6, align 8
  %19 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %20 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @dev_hard_header(%struct.sk_buff* %15, %struct.net_device* %16, i32 %17, i8* %18, i32* null, i32 %21)
  %23 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %24 = call i32 @dev_queue_xmit(%struct.sk_buff* %23)
  ret i32 %24
}

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @dev_hard_header(%struct.sk_buff*, %struct.net_device*, i32, i8*, i32*, i32) #1

declare dso_local i32 @dev_queue_xmit(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
